removed node selector for fluentd (ds)

--- a/logging-instance.yaml
+++ b/logging-instance.yaml
@@ -50,10 +50,4 @@ spec:
   collection:
     logs:
       type: "fluentd"
-      fluentd:
-        nodeSelector:
-        node-role.kubernetes.io/infra: ""
-        tolerations:
-          - effect: NoSchedule
-            key: node-role.kubernetes.io/infra
-            operator: Exists
+      fluentd: {}
